# searxng-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: aggregator.rs  brave.rs  duckduckgo.rs  engines.rs  startpage.rs
src/: aggregator.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  normalizer.rs
src/engines/: brave.rs  duckduckgo.rs  mod.rs  startpage.rs  yahoo.rs
src/server/: handlers.rs  mod.rs
tests/: api.rs
tui/: Cargo.toml  README.md
tui/src/: app.rs  main.rs  ui.rs
