[package]
name = "metadata-search-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", features = ["gzip", "brotli", "cookies"] }
scraper          = "0.20"
axum             = "0.7"
tower-http       = { version = "0.5", features = ["trace", "cors"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
url              = "2"
thiserror        = "1"
anyhow           = "1"
futures          = "0.3"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding      = "2"

[dev-dependencies]
wiremock         = "0.6"
tokio-test       = "0.4"
