[package]
name = "metadata-search-engine-rs"
version = "0.1.0"
authors = ["ml <mikeluu089@proton.me>"]
edition = "2024"
description = "A metadata search engine binary and server similar to SEAR-XNG"
license = "MIT"
repository = "https://github.com/MikeLuu99/searxng-rust"
readme = "README.md"
keywords = ["metadata", "search", "engine", "scraper", "searxng"]
categories = ["api-bindings", "algorithms"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "cookies"] }
scraper = "0.20"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "1"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
